# OpenRAG

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.test  pyproject.toml
backend/db/: db.sql
backend/src/app/: main.py  worker.py
backend/src/app/agents/agents/: __init__.py  rag_agent.py
backend/src/app/agents/prompts/: __init__.py  system.py
backend/src/app/agents/tools/: __init__.py  search_tool.py
backend/src/app/api/routers/: agents.py  auth.py  chat.py  documents.py  health.py  me.py  sessions.py
backend/src/app/api/schemas/: agents.py  auth.py  common.py
backend/src/app/config/: __init__.py  llm.yml  llm_config.py  settings.py
backend/src/app/core/: broker.py  cache.py  celery_app.py  db.py  deps.py  disposable_email.py  email.py  logging.py  middleware.py  rate_limit.py  security.py  token_cache.py
backend/src/app/data/: models.py
backend/src/app/data/repositories/: agents.py  conversations.py  documents.py  login.py  messages.py  oauth.py  tokens.py  users.py
backend/src/app/rag/: chunking.py  embeddings.py  index.py  parsing.py  qdrant.py  search.py
backend/src/app/services/: agent_chat_service.py  agent_service.py  auth_service.py  chat_service.py  document_service.py  errors.py  ingestion.py  oauth_service.py  session_service.py
backend/src/app/utils/: files.py
backend/tests/: _support.py  conftest.py  test_agent_logic.py  test_email_policy.py  test_llm_config.py  test_oauth_state.py  test_rate_limit_parse.py  test_search_filter.py  test_security.py  test_settings.py  test_token_cache.py  wait_for_services.py
backend/tests/e2e/: conftest.py  test_agents_e2e.py  test_auth_flow.py  test_chat.py  test_sessions_documents.py
backend/tests/integration/: conftest.py  test_rag_search.py
