[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrag-backend"
version = "0.1.0"
description = "OpenRAG self-hosted agentic RAG backend (FastAPI + LangChain + Qdrant)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    # web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",        # multipart file uploads
    "httpx>=0.27",

    #  settings / validation 
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",            # syntax + MX deliverability checks
    "disposable-email-domains>=0.0.110",

    #  database 
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",

    #  auth / security 
    "pyjwt>=2.9",                      # HS256 access tokens
    "argon2-cffi>=23.1",               # argon2id password hashing
    "itsdangerous>=2.2",               # signed OAuth state cookie (CSRF)
    "google-auth>=2.35",               # official Google ID-token verification
    "requests>=2.32",                  # transport for google-auth verification
    "msal>=1.31",                      # official Microsoft Authentication Library

    #  background jobs + auth cache (RabbitMQ) 
    "celery>=5.4",                     # AMQP broker via kombu/py-amqp (no redis)
    "aio-pika>=9.4",                   # async fanout for the JWT denylist cache

    #  RAG: vectors, LLM (LiteLLM), embeddings, parsing 
    "qdrant-client>=1.12",
    "langchain>=1.0.0",                # create_agent
    "langchain-community>=0.3",        # ChatLiteLLM bridge
    "langchain-text-splitters>=0.3",
    "litellm>=1.50",                   # provider-agnostic chat + embeddings (Azure etc.)
    "pyyaml>=6.0",                     # llm.yml config
    "fastembed>=0.4",                  # local sparse (BM25) embeddings
    "tiktoken>=0.8",
    "pymupdf>=1.24",                   # PDF parsing
    "python-docx>=1.1",                # DOCX parsing
    "python-magic>=0.4.27",            # magic-byte content sniffing

    #  mail / logging 
    "aiosmtplib>=3.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"app.config" = ["*.yml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]   # "." makes `tests` importable (tests._support shared fixtures)
testpaths = ["tests"]
markers = [
    "integration: internal-layer tests needing real Postgres/RabbitMQ/Qdrant (RUN_INTEGRATION=1)",
    "e2e: end-to-end HTTP-API tests needing real Postgres/RabbitMQ/Qdrant (RUN_INTEGRATION=1)",
]
